--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,87 @@
 body {
-    background-color: aqua;
-    font-family: 'Supermercado One', cursive;
-    font-size: 50px;
+    width: auto;
+    height: auto;
+    min-width: 100px;
+    max-width: 850px;
+    margin: 20px;
 }
 
-div.main-container {
-    border: 2px solid red;
+div {
+    background-color: rgb(240, 231, 239);
+    margin-top: 20px;
 }
-header, main {
-    border: 2px solid white;
+
+div > h1 {
+    width: 100%;
+    color: white;
+    text-align: center;
+    font-family: 'Supermercado One', cursive;
+    font-size: 70pt;
+    position: absolute;
+    top: 25%;
+}
+
+.stack {
+    width: 100%;
+    margin: 10px 10px 10px 25px;
+}
+
+img {
+    width: 100%;
+}
+
+.banner {
+    width: 100%;
+    position: relative;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0%;
+}
+
+li {
+    margin-bottom: 5px;
+}
+
+.container {
+    width: 100%;
+    max-width: 100%;
+    height: 324px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+h2 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+    max-width: 100%;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+
+p {
+    max-width: 100%;
+    line-height: 25px;
+}
+
+
+.form-container {
+    margin-top: 10px;
+}
+form {
+    max-width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: gray;
+}
+
+button {
+    width: 50px;
+    height: 25px;
+    color: rgb(255, 255, 255);
+    background-color: rgba(43, 40, 40, 0.623);
 }
